[package]
name = "lineage"
version = "0.1.0"
authors = ["d.sadkovoy <d.sadkovoy@smartweb.com.ua>"]

[dependencies]
clap = "~2.29"
reqwest = { git = "https://github.com/scottschroeder/reqwest", branch = "noverify" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
colored = "1.6"

